fix: button spaing on mobile

--- a/style.css
+++ b/style.css
@@ -461,12 +461,12 @@ footer ul li a:hover:after {
 
 .popUp div:nth-child(2) div{
     display: grid;
-    grid-template-columns: repeat(100, 20%);
+    grid-template-columns: repeat(100, 60px);
 }
 
 .popUp div:nth-child(2) div a:nth-child(1){
-    width: 20px;
-    height: 20px;
+    width: 50px;
+    height: 50px;
     background: url('https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png');
     background-size: cover;
     display: block;
@@ -474,8 +474,8 @@ footer ul li a:hover:after {
 }
 
 .popUp div:nth-child(2) div a:nth-child(2){
-    width: 20px;
-    height: 20px;
+    width: 40px;
+    height: 40px;
     background: url('https://cdn-icons-png.flaticon.com/512/61/61109.png');
     background-size: cover;
     display: block;
